--- a/src/app/painel/painel.component.html
+++ b/src/app/painel/painel.component.html
@@ -1,29 +1,26 @@
 <div class="container">
-    <!-- <div class="jumbotron"> -->
-        <div class="row">
-            <div class="col-sm-6">
-                <app-progresso></app-progresso>
-            </div>
-            <div class="col-sm-6">
-                <app-tentativas></app-tentativas>
+    <div class="row">
+        <div class="col-sm-6">
+            <app-progresso [progresso]="progresso"></app-progresso>
+        </div>
+        <div class="col-sm-6">
+            <app-tentativas></app-tentativas>
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
+            <h6>Traduza a frase:</h6>
+            <p>{{rodadaFrase.fraseEng}}</p>
+        </div>
+        <div class="form-group">
+            <textarea class="form-control" rows="3" (input)="atualizaFrase($event)"></textarea>
+        </div>
+    </div>
+    <div class="row margin">
+        <div class="col">
+            <div class="d-flex justify-content-end">
+                <button type="button" class="btn btn-success" (click)="verificarResposta()">Verificar</button>
             </div>
         </div>
-        <div class="row">
-            <div class="col">
-                <h6>Traduza a frase:</h6>
-                <p>How are you?</p>
-            </div>
-
-            <div class="form-group">
-                <textarea class="form-control" rows="3"></textarea>
-            </div>
-        </div>
-        <div class="row margin">
-            <div class="col">
-                <div class="d-flex justify-content-end">
-                    <button type="button" class="btn btn-success">Verificar</button>
-                </div>
-            </div>
-        </div>
-    <!-- </div> -->
+    </div>
 </div>
