--- a/src/app/tentativas/tentativas.component.html
+++ b/src/app/tentativas/tentativas.component.html
@@ -1,5 +1,6 @@
 <div class="d-flex justify-content-end">
-    <img src="../../assets/coracao_vazio.svg" width="38">
+    <img *ngFor="let coracao of coracoes" [src]="coracao.exibeCoracao()" [width]="coracao.getTamanhoImg()">
+    <!-- <img src="../../assets/coracao_vazio.svg" width="38">
     <img src="../../assets/coracao_cheio.svg" width="30">
-    <img src="../../assets/coracao_cheio.svg" width="30">
+    <img src="../../assets/coracao_cheio.svg" width="30"> -->
 </div>
